--- a/front/public/index.html
+++ b/front/public/index.html
@@ -4,12 +4,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>orbit</title>
+    <script src="/js/orbits.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLZKshJUbwtHxwxW6NaRyJSZug3oFFnjo&callback=initMap" async
+      defer></script>
+    <script>
+      function initMap() {
+        console.info("init map")
+      }
+    </script>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but orbit doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>JavaScriptを有効にしてください</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
