--- a/front/public/index.html
+++ b/front/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="/style/app.css">
     <title>orbit</title>
     <script src="/js/orbits.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLZKshJUbwtHxwxW6NaRyJSZug3oFFnjo&callback=initMap" async
