--- a/front/public/index.html
+++ b/front/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="/style/app.css">
     <title>orbit</title>
+    <script src="/lib/jquery-3.4.1.min.js"></script>
     <script src="/js/orbits.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLZKshJUbwtHxwxW6NaRyJSZug3oFFnjo&callback=initMap" async
       defer></script>
