不要処理を削除＆TinyOrbitに変更

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="/style/app.css">
     <title>orbit</title>
     <script src="/lib/jquery-3.4.1.min.js"></script>
-    <script src="/js/orbits.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLZKshJUbwtHxwxW6NaRyJSZug3oFFnjo&callback=initMap" async
-      defer></script>
+    <script src="/js/TinyOrbit.js"></script>
     <script>
       function initMap() {
         console.info("init map")
@@ -23,4 +21,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLZKshJUbwtHxwxW6NaRyJSZug3oFFnjo&callback=initMap"></script>
 </html>
