--- a/front/public/index.html
+++ b/front/public/index.html
@@ -10,7 +10,7 @@
     <script src="/js/TinyOrbit.js"></script>
     <script>
       function initMap() {
-        console.info("init map")
+        // 本当はこのイベントを受けてMap関係の処理を開始すべき
       }
     </script>
   </head>
